--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
         title URISUNSU
         block head
     body
+        block fb
         #wrap
             header
                 block title
