--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@
 doctype html
 html
     head
-        title URISUNSU
+        title 유럽파의 일정만 알고 싶어요~
         block head
     body
         block fb
