--- a/views/urisunsu.jade
+++ b/views/urisunsu.jade
@@ -5,8 +5,15 @@ block head
     meta(name='viewport' , content='width=device-width,initial-scale=1.0')
     link(rel='stylesheet',href='/stylesheets/reset.css')
     link(rel='stylesheet',href='/stylesheets/main.css')
-    script(src='/javascripts/main.js')
+    script(type="text/javascript").
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-45694371-1', 'nigayo.com');
+        ga('send', 'pageview');
+        
 
 block fb
     div#fb-root
@@ -15,10 +22,18 @@ block fb
 
 
 block title
-    h1.title 한 주간의 해외파 일정
+    h1.title 2주간의 해외파 일정
 
 block section
     section#dateInfo 
+        - var getDateInfo = function() {
+                    -var now = new Date();
+                    -var cronHour = 6;
+                    -if(now.getHours() < cronHour) now.setDate(now.getDate()-1);
+                    - var lastDate = new Date(now.getTime() + 14*24*60*60*1000);
+                    - return ("< "+(now.getMonth()+1) + "." + now.getDate() + " - " + (lastDate.getMonth()+1) +"." +lastDate.getDate()+" >");
+            - }
+
         - var getLastUpdate = function() {
                     -var now = new Date();
                     -var cronHour = 6;
@@ -26,8 +41,11 @@ block section
                     -return (now.getMonth()+1 + "월 " + now.getDate() +"일 오전"+cronHour+"시");
                     -}
 
-        span= getLastUpdate()
-        span 에 업데이트 됐어요 :-)
+        div#leagueInfo
+            span 분데스리가, 프리미어리그만~
+
+        div#nextDate
+            span= getDateInfo()
     table.main_table(cellspacing='0' border='1')
         caption team Schedule
         colgroup
@@ -62,8 +80,14 @@ block section
                             img.logo(src="/images/logos/" + getLogoUrl(d.league) + ".png")
                             span= d.league
 block footer 
-       div.fb-like(data-href="http://125.209.199.174/urisunsu" data-width="100px;" data-layout="button_count" data-    action="like" data-show-faces="true" data-share="true")
+       div#miscInfo 
+            span 매일 새벽 6시에 업데이트가 되요 ;-)
+       div.fb-like(data-href="http://nigayo.com/urisunsu/" data-width="100px;" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true")
 
 block script
        script(type='text/javascript').
-
+            document.addEventListener("DOMContentLoaded", function(event) {
+                var nTrTagLen = document.querySelector('.main_table tbody').getElementsByTagName('tr').length;
+                var eleSection = document.querySelector('#wrap > section');
+                if (nTrTagLen === 0) eleSection.insertAdjacentHTML("beforeend" , "<div id='nonematch'> 해당기간에 경기가 없어요 </div>");
+            });
