--- a/views/urisunsu.jade
+++ b/views/urisunsu.jade
@@ -2,24 +2,14 @@ extends layout
 
 block head
     meta(charset='utf-8')
+    meta(http-equiv='Cache-control' content='public')
     meta(name='viewport' , content='width=device-width,initial-scale=1.0')
     link(rel='stylesheet',href='/stylesheets/reset.css')
     link(rel='stylesheet',href='/stylesheets/main.css')
-    script(type="text/javascript").
-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-45694371-1', 'nigayo.com');
-        ga('send', 'pageview');
         
 
 block fb
     div#fb-root
-    script(type="text/javascript").
-         (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=402853213147941"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));
-
 
 block title
     h1.title 2주간의 해외파 일정
@@ -85,9 +75,24 @@ block footer
        div.fb-like(data-href="http://nigayo.com/urisunsu/" data-width="100px;" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true")
 
 block script
-       script(type='text/javascript').
+       script(type="text/javascript").
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-45694371-1', 'nigayo.com');
+            ga('send', 'pageview');
+
+
+            //facebook like button
+            (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=402853213147941"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));
+
+            //경기 없는 경우 에러처리
             document.addEventListener("DOMContentLoaded", function(event) {
                 var nTrTagLen = document.querySelector('.main_table tbody').getElementsByTagName('tr').length;
                 var eleSection = document.querySelector('#wrap > section');
                 if (nTrTagLen === 0) eleSection.insertAdjacentHTML("beforeend" , "<div id='nonematch'> 해당기간에 경기가 없어요 </div>");
             });
+
+
